Delete double scroll on page and fix heigh of calendar

--- a/agenda-webapps/src/main/webapp/skin/less/agenda.less
+++ b/agenda-webapps/src/main/webapp/skin/less/agenda.less
@@ -1,7 +1,12 @@
 @import "./variables.less";
 
 .agenda-application {
-
+  .v-calendar {
+    min-height: ~"calc(100vh - 230px)";
+  }
+  .v-calendar-daily__scroll-area {
+    overflow: auto;
+  }
 }
 .event-form {
   .space-suggester {
